modify the footer text

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <footer>
         <div class="container">
             <div>
-                Copyright © 2021 BusinessLand
+                Copyright © 2021 DevMastery
             </div>
             <div id="social-media">
                 <a href="#">
